--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
   src: url("./fonts/Roboto-Light.ttf") format("truetype");
-}
+} */
